--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": "8.*",
-        "laravel/laravel": "9.*"
+        "php": "7.*|8.*",
+        "laravel/laravel": "7.*"
     }
 }
