--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
     ],
     "require": {
         "php": "7.*|8.*",
-        "laravel/laravel": "^7.*|^8.*|^9.*"
+        "laravel/laravel": "^7.0|^8.0|^9.0"
     }
 }
