--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "php": "7.*|8.*",
+        "php": "^7.0|^8.0",
         "laravel/laravel": "^7.0|^8.0|^9.0"
     }
 }
